<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:gravity="center"
        android:text="@string/chat_group_info_permissions"
        android:textAppearance="@style/ermisUiTextAppearance.HeadlineBold"
        app:layout_constraintTop_toTopOf="parent"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:padding="4dp"
        android:text="@string/action_save"
        android:textColor="@color/color_primary"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@id/tvTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvTitle"
        />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        >

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/chat_group_info_members_permission"
            android:textSize="16sp"
            />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switchSendMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:text="@string/permission_send_messages"
            />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switchEditMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:text="@string/permission_edit_messages"
            />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switchDeleteMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:text="@string/permission_delete_messages"
            />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switchReactionMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:text="@string/permission_react_messages"
            />

<!--        <androidx.appcompat.widget.AppCompatTextView-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_margin="16dp"-->
<!--            android:text="@string/chat_group_info_members_manage_permission"-->
<!--            android:textSize="16sp"-->
<!--            />-->

<!--        <com.google.android.material.switchmaterial.SwitchMaterial-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginHorizontal="16dp"-->
<!--            android:text="@string/permission_join_channel"-->
<!--            />-->

<!--        <com.google.android.material.switchmaterial.SwitchMaterial-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginHorizontal="16dp"-->
<!--            android:text="@string/permission_invite_member"-->
<!--            />-->

<!--        <com.google.android.material.switchmaterial.SwitchMaterial-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginHorizontal="16dp"-->
<!--            android:text="@string/permission_change_channel_info"-->
<!--            />-->
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.constraintlayout.widget.ConstraintLayout>