<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/round_bottom_sheet"
    android:orientation="vertical"
    >

    <View
        android:layout_width="32dp"
        android:layout_height="2dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:background="@color/color_onSurfaceVariant"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:textColor="@color/ui_text_color_primary"
        android:textSize="@dimen/ui_text_large"
        android:textStyle="bold"
        android:text="@string/platforms_title"
        />

    <TextView
        android:id="@+id/tvSdks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical"
        android:textColor="@color/ui_text_color_primary"
        android:textSize="@dimen/ui_text_medium"
        android:paddingVertical="8dp"
        android:paddingHorizontal="6dp"
        android:text="@string/platforms_sdks"
        />

    <TextView
        android:id="@+id/tvErmis"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="24dp"
        android:gravity="center_vertical"
        android:textColor="@color/ui_text_color_primary"
        android:textSize="@dimen/ui_text_medium"
        android:paddingVertical="8dp"
        android:paddingHorizontal="6dp"
        android:text="@string/platforms_ermis"
        />

</androidx.appcompat.widget.LinearLayoutCompat>
