<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ui_white_snow"
    tools:ignore="MissingConstraints"
    >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/ui_white"
        android:elevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/user_login_custom_title"
            android:textAppearance="@style/ermisUiTextAppearance.HeadlineBold"
            />

    </androidx.appcompat.widget.Toolbar>

    <View
        android:id="@+id/separator"
        android:layout_width="0dp"
        android:layout_height="@dimen/ui_divider_height"
        android:background="@drawable/divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        />

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="110dp"
        android:layout_height="50dp"
        android:src="@drawable/ic_logo_login"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@+id/separator"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/inputFieldsFlow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_medium"
        android:layout_marginTop="@dimen/spacing_medium"
        android:layout_marginEnd="@dimen/spacing_medium"
        android:layout_marginBottom="60dp"
        app:constraint_referenced_ids="apiKeyInputLayout, userIdEditText, userTokenInputLayout, userNameInputLayout, passWordEditText"
        app:flow_lastVerticalStyle="packed"
        app:flow_maxElementsWrap="1"
        app:flow_verticalGap="8dp"
        app:flow_wrapMode="chain"
        app:layout_constraintBottom_toTopOf="@id/loginButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivLogo"
        app:layout_constraintVertical_bias="0"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/apiKeyInputLayout"
        style="@style/LoginEditTextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/custom_login_field_api_key_hint"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/apiKeyEditText"
            style="@style/LoginEditText"
            tools:ignore="RtlHardcoded"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/userIdEditText"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:background="@drawable/bg_input_text_login"
        android:gravity="center_vertical"
        android:hint="@string/custom_login_field_user_id_hint"
        android:paddingHorizontal="16dp"
        android:textAppearance="@style/TextAppearance_Belo_Body_Normal14_Reg"
        android:textColor="@color/color_onSurface"
        android:textColorHint="@color/color_onSurfaceVariant"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/userTokenInputLayout"
        style="@style/LoginEditTextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/custom_login_field_user_token"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/userTokenEditText"
            style="@style/LoginEditText"
            android:inputType="textMultiLine"
            android:singleLine="false"
            tools:ignore="RtlHardcoded"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/userNameInputLayout"
        style="@style/LoginEditTextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/custom_login_field_user_name_hint"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/userNameEditText"
            style="@style/LoginEditText"
            android:imeOptions="actionDone"
            tools:ignore="RtlHardcoded"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/passWordEditText"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:background="@drawable/bg_input_text_login"
        android:gravity="center_vertical"
        android:hint="@string/custom_login_field_password_hint"
        android:paddingHorizontal="16dp"
        android:textAppearance="@style/TextAppearance_Belo_Body_Normal14_Reg"
        android:textColor="@color/color_onSurface"
        android:textColorHint="@color/color_onSurfaceVariant"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginButton"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="@dimen/spacing_medium"
        android:layout_marginEnd="@dimen/spacing_medium"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/ui_button_background_color"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/custom_login_button_text"
        android:textAllCaps="false"
        android:textColor="@color/ui_button_text_color"
        android:textSize="16sp"
        app:cornerRadius="24dp"
        app:layout_constraintBottom_toTopOf="@id/loginWalletButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginWalletButton"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="@dimen/spacing_medium"
        android:layout_marginEnd="@dimen/spacing_medium"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/ui_button_background_color"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/custom_login_wallet_button_text"
        android:textAllCaps="false"
        android:textColor="@color/ui_button_text_color"
        android:textSize="16sp"
        app:cornerRadius="24dp"
        app:layout_constraintBottom_toTopOf="@id/goRegisterButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/goRegisterButton"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="@dimen/spacing_medium"
        android:layout_marginEnd="@dimen/spacing_medium"
        android:layout_marginBottom="16dp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/custom_register_button_text"
        android:textAllCaps="false"
        android:textColor="@color/color_primary"
        android:textSize="16sp"
        app:cornerRadius="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <ProgressBar
        android:id="@+id/loadingProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
