<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ui_white_snow"
    tools:ignore="MissingConstraints"
    >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/ui_white"
        android:elevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/user_profile_title"
            android:textAppearance="@style/ermisUiTextAppearance.HeadlineBold"
            />

    </androidx.appcompat.widget.Toolbar>

    <View
        android:id="@+id/separator"
        android:layout_width="0dp"
        android:layout_height="@dimen/ui_divider_height"
        android:background="@drawable/divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        />

    <network.ermis.ui.widgets.avatar.UserAvatarView
        android:id="@+id/userAvatarView"
        style="@style/ermisUiChatInfoAvatarStyle"
        android:layout_margin="16dp"
        android:src="@drawable/ic_logo_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/separator"
        />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivChangeAvatar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_change_avatar"
        app:layout_constraintBottom_toBottomOf="@id/userAvatarView"
        app:layout_constraintEnd_toEndOf="@id/userAvatarView"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/userNameEditText"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="16dp"
        android:background="@drawable/bg_input_text_login"
        android:gravity="center_vertical"
        android:hint="@string/custom_login_field_user_name_hint"
        android:singleLine="true"
        android:paddingHorizontal="16dp"
        android:textAppearance="@style/TextAppearance_Belo_Body_Normal14_Reg"
        android:textColor="@color/color_onSurface"
        android:textColorHint="@color/color_onSurfaceVariant"
        app:layout_constraintTop_toBottomOf="@id/userAvatarView"
        />

    <androidx.appcompat.widget.AppCompatEditText
        android:enabled="false"
        android:alpha="0.5"
        android:id="@+id/userPhoneEditText"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="16dp"
        android:background="@drawable/bg_input_text_login"
        android:gravity="center_vertical"
        android:hint="@string/custom_login_field_user_phone_hint"
        android:singleLine="true"
        android:paddingHorizontal="16dp"
        android:textAppearance="@style/TextAppearance_Belo_Body_Normal14_Reg"
        android:textColor="@color/color_onSurface"
        android:textColorHint="@color/color_onSurfaceVariant"
        app:layout_constraintTop_toBottomOf="@id/userNameEditText"
        />

    <androidx.appcompat.widget.AppCompatEditText
        android:enabled="false"
        android:alpha="0.5"
        android:id="@+id/userAboutEditText"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="16dp"
        android:background="@drawable/bg_input_text_login"
        android:gravity="center_vertical"
        android:hint="@string/custom_login_field_user_about_hint"
        android:paddingHorizontal="16dp"
        android:textAppearance="@style/TextAppearance_Belo_Body_Normal14_Reg"
        android:textColor="@color/color_onSurface"
        android:textColorHint="@color/color_onSurfaceVariant"
        app:layout_constraintTop_toBottomOf="@id/userPhoneEditText"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvUserLogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_out"
        android:textColor="@color/color_error"
        android:padding="16dp"
        android:layout_margin="16dp"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/userAboutEditText"
        app:layout_constraintStart_toStartOf="parent"/>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnUpdate"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="@dimen/spacing_medium"
        android:layout_marginEnd="@dimen/spacing_medium"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/ui_button_background_color"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/user_update_profile_button"
        android:textAllCaps="false"
        android:textColor="@color/ui_button_text_color"
        android:textSize="16sp"
        app:cornerRadius="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <ProgressBar
        android:id="@+id/loadingProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
